--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Melby Mathew",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.2.6",
+    "axios": "^0.18.0",
     "graphql": "^14.0.2"
   }
 }
